--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://alimy.github.io"
+baseurl = "http://alimy.me"
 title = "Alimy"
 author = "Alex Mcray"
 copyright = "Copyright (c) 20015 - 2016, Alex Mcray; all rights reserved."
