--- a/config.toml
+++ b/config.toml
@@ -11,3 +11,4 @@ theme = "hugo-uno"
     logo = "/images/logo.jpg"
     description = "乱花渐欲迷人眼，浅草才能没马蹄。"
     github = "alimy"
+    twitter = "alimy86"
