--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ theme = "uno"
 [params]
     name = "Alimy"
     logo = "/images/logo.jpg"
-    description = "乱花渐欲迷人眼，浅草才能没马蹄。"
+    description = "Make it easy and stupid."
     github = "alimy"
     twitter = "alimy86"
     disqus = "alimy"
