--- a/config.toml
+++ b/config.toml
@@ -11,5 +11,6 @@ theme = "uno"
     logo = "/images/logo.jpg"
     description = "Make it easy and stupid."
     github = "alimy"
+    gitbus = "alimy"
     twitter = "alimy86"
     disqus = "alimy"
