--- a/config.toml
+++ b/config.toml
@@ -12,5 +12,5 @@ theme = "uno"
     description = "糊涂小栈"
     github = "alimy"
     gitbus = "alimy"
-    twitter = "alimy86"
+    twitter = "bitriory"
     disqus = "alimy"
