--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://alimy.me"
-title = "牧 野"
+title = "北 野"
 author = "Michael Li"
 copyright = "&copy;2018, Alimy; all rights reserved."
 canonifyurls = true
